# codeproject_ai_yolov11

./: .gitattributes  .gitignore  LICENSE  README.md  detect.py  detect_adapter.py  explore.html  install.bat  install.sh  modulesettings.json  options.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: yolo11m-seg.pt  yolo11n-seg.pt
codeproject_ai_yolov11/: __init__.py  detector.py
tests/: test_detector.py
